nav bar overlapping mobile page content fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -181,6 +181,10 @@ header {
         display: none;
     }
 
+    .home {
+        margin-top: 70px;
+    }
+
     .home-content {
         margin-bottom: 20%;
     }
